<resources>
    <string name="app_name">BusinessCard</string>
    <string name="Contact">Contact us:</string>
    <string name="Address"> <b> M2 Café &amp; Bar </b></string>
    <string name="Address2">Otto-von-Guericke-Straße 56  \nMagdeburg 39104  \n0391/5556837</string>
    <string name="web">www.m2-md.de</string>
    <string name="timing">Daily: 09:00 to 23:00</string>
    <string name="style">cursive</string>
    <string name="style2">serif-monospace</string>
</resources>
